Update task to create more objects and add vsphere support

--- a/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
@@ -45,7 +45,7 @@ networking:
   clusterNetwork:
   - cidr: {{ clustercidr }}
     hostPrefix: 23
-  machineCIDR:
+  machineNetwork:
 {% for cidr in aws_vpccidr %}
   - cidr: {{ cidr }}
 {% endfor %}
