--- a/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
@@ -16,7 +16,7 @@ compute:
         size: 100
         type: iol
 {% if aws_kmsKeyARN is defined %}
-        kmsKeyARN: {{ aws_kmsKeyARN | default(omit) }}
+        kmsKeyARN: {{ aws_kmsKeyARN }}
 {% endif %}
   replicas: 3
 controlPlane:
@@ -35,7 +35,7 @@ controlPlane:
         size: 100
         type: iol
 {% if aws_kmsKeyARN is defined %}
-        kmsKeyARN: {{ aws_kmsKeyARN | default(omit) }}
+        kmsKeyARN: {{ aws_kmsKeyARN }}
 {% endif %}
   replicas: 3
 metadata:
@@ -66,20 +66,20 @@ platform:
     - {{ subnet }}
 {% endfor %}
 proxy:
-  httpProxy: {{ aws_proxy | default(omit) }}
-  httpsProxy: {{ aws_proxy | default(omit) }}
-  noProxy: {{ aws_noproxy | default(omit) }}
+  httpProxy: {{ aws_proxy | default("") }}
+  httpsProxy: {{ aws_proxy | default("") }}
+  noProxy: {{ aws_noproxy | default("") }}
 pullSecret: '{{ pull_secret | to_json }}'
-{% if aws_ssh_key is defined %}
-sshKey: {{ aws_ssh_key }}
+{% if ssh_public_key is defined %}
+sshKey: {{ ssh_public_key }}
 {% endif %}
-fips: {{ aws_fips | default(omit) }}
-publish: {{ aws_publish | default(omit) }}
+fips: {{ aws_fips | default('false') }}
+publish: {{ aws_publish | default('External') }}
 credentialsMode: {{ aws_credentialsMode | default("") }}
-{% if aws_trustBundle is defined %}
+{% if trustBundle is defined %}
 addtionalTrustBundle: 
 {% filter indent(width=2) %}
-  {{ aws_trustBundle }}
+  {{ trustBundle }}
 {% endfilter %}
 {% endif %}
 imageContentSources:
