--- a/roles/managed-clusters-role/templates/aws-creds.yml.j2
+++ b/roles/managed-clusters-role/templates/aws-creds.yml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   aws_access_key_id: {{ aws_access_key_id | b64encode }}
-  aws_secret_access_key: R{{ aws_secret_access_key | b64encode }}EDACTED
+  aws_secret_access_key: {{ aws_secret_access_key | b64encode }}
 kind: Secret
 metadata:
   name: {{ clustername }}-aws-creds
