Moved variable location and added reference to it

--- a/roles/managed-clusters-role/templates/vs-clusterdeployment.yaml.j2
+++ b/roles/managed-clusters-role/templates/vs-clusterdeployment.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   name: {{ clustername }}
   namespace: {{ clustername }}
 spec:
-  baseDomain: hive.example.com
+  baseDomain: {{ publiczonename }}
   clusterName: {{ clustername }}
   platform:
     vsphere:
