--- a/roles/managed-clusters-role/templates/cluster-install-config-secret.yaml.j2
+++ b/roles/managed-clusters-role/templates/cluster-install-config-secret.yaml.j2
@@ -1,7 +1,8 @@
 apiVersion: v1
-data:
-  install-config.yaml: {{ encodedInstallConfig }}
 kind: Secret
 metadata:
   name: {{ clustername }}-install-config
   namespace: {{ clustername }}
+type: Opaque
+data:
+  install-config.yaml: {{ encodedInstallConfig }}
