--- a/roles/managed-clusters-role/templates/cluster-install-config-secret.yaml.j2
+++ b/roles/managed-clusters-role/templates/cluster-install-config-secret.yaml.j2
@@ -5,4 +5,5 @@ metadata:
   namespace: {{ clustername }}
 type: Opaque
 data:
-  install-config.yaml: {{ encodedInstallConfig }}
+  install-config.yaml: >-
+    {{ encodedInstallConfig }}
