--- a/roles/managed-clusters-role/templates/vs-creds.yaml.j2
+++ b/roles/managed-clusters-role/templates/vs-creds.yaml.j2
@@ -1,8 +1,8 @@
 ---
 apiVersion: v1
 stringData:
-  password: {{ vs_user }}
-  username: {{ vs_password }}
+  username: {{ vs_user }}
+  password: {{ vs_password }}
 kind: Secret
 metadata:
   name: {{ clustername }}-vsphere-creds
