Parameterize vSphere worker and infra nodes

--- a/roles/managed-clusters-role/templates/vs-infra-machinepool.yaml.j2
+++ b/roles/managed-clusters-role/templates/vs-infra-machinepool.yaml.j2
@@ -21,4 +21,4 @@ spec:
       memoryMB: {{ vs_infra_mem | default(vs_worker_mem) }}
       osDisk:
         diskSizeGB: {{ vs_infra_disksize | default(vs_worker_disksize) }}
-  replicas: 3
+  replicas: {{ vs_infra }}
