--- a/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
@@ -93,14 +93,14 @@ addtionalTrustBundle:
 {% endif %}
 imageContentSources:
   - mirrors:
-      - repo.example.com/openshift-release-images
+      - {{ repo }}/openshift-release-images
     source: quay.io/openshift-release-dev/ocp-release
   - mirrors:
-      - repo.example.com/release-images
+      - {{ repo }}/release-images
     source: quay.io/openshift-release-dev-ocp-v4.0-art-dev
   - mirrors:
-      - repo.example.com/multicluster-engine
+      - {{ repo }}/multicluster-engine
     source: registry.redhat.io.io/multicluster-engine
   - mirrors:
-      - repo.example.com/rhacm2
+      - {{ repo }}/rhacm2
     source: registry.redhat.io.io/rhacm2
