--- a/roles/managed-clusters-role/templates/aws-infra-machinepool.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-infra-machinepool.yaml.j2
@@ -16,7 +16,7 @@ spec:
   name: infra
   platform:
     aws:
-      type: {{ aws_worker_instance }}
+      type: {{ aws_infra_instance }}
       rootVolume:
         iops: 4000
         size: 100
