Fix some URL typos

--- a/roles/managed-clusters-role/templates/vs-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/vs-install-config.yaml.j2
@@ -77,7 +77,7 @@ imageContentSources:
     source: quay.io/openshift-release-dev-ocp-v4.0-art-dev
   - mirrors:
       - {{ repo }}/multicluster-engine
-    source: registry.redhat.io.io/multicluster-engine
+    source: registry.redhat.io/multicluster-engine
   - mirrors:
       - {{ repo }}/rhacm2
-    source: registry.redhat.io.io/rhacm2
+    source: registry.redhat.io/rhacm2
