Update secret name to expected one.

--- a/roles/managed-clusters-role/templates/ssh-key.yaml.j2
+++ b/roles/managed-clusters-role/templates/ssh-key.yaml.j2
@@ -9,6 +9,6 @@ data:
 {% endif %}
 kind: Secret
 metadata:
-  name: {{ clustername }}-ssh-key
+  name: {{ clustername }}-ssh-private-key
   namespace: {{ clustername }}
 type: Opaque
