--- a/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
@@ -86,7 +86,7 @@ fips: {{ fips | default('false') }}
 publish: {{ aws_publish | default('External') }}
 credentialsMode: {{ aws_credentialsMode | default("") }}
 {% if trustBundle is defined %}
-addtionalTrustBundle: 
+additionalTrustBundle: 
 {% filter indent(width=2) %}
   {{ trustBundle }}
 {% endfilter %}
