Fix typo in AWS types

--- a/roles/managed-clusters-role/templates/aws-clusterdeployment.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-clusterdeployment.yaml.j2
@@ -24,7 +24,7 @@ spec:
     installConfigSecretRef:
       name: {{ clustername }}-install-config
     sshPrivateKeySecretRef:
-      name: {{ clustername }}-ssh-key
+      name: {{ clustername }}-ssh-private-key
     imageSetRef:
       name: {{ imageset }}
   pullSecretRef:
