--- a/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
+++ b/roles/managed-clusters-role/templates/aws-install-config.yaml.j2
@@ -15,7 +15,7 @@ compute:
       rootVolume:
         iops: 4000
         size: 100
-        type: iol
+        type: io1
 {% if aws_kmsKeyARN is defined and not 'None' %}
         kmsKeyARN: {{ aws_kmsKeyARN }}
 {% endif %}
@@ -38,7 +38,7 @@ controlPlane:
       rootVolume:
         iops: 4000
         size: 100
-        type: iol
+        type: io1
 {% if aws_kmsKeyARN is defined and not 'None' %}
         kmsKeyARN: {{ aws_kmsKeyARN }}
 {% endif %}
